--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@ NODE_ENV="development"
 MONGO_URL_DEV="mongodb://127.0.0.1:27017/onlink-project"
 MONGO_URL_PROD="mongodb://mongo:EE2fb3C5GEGg5eaBgd4eEBhhBG53cf25@monorail.proxy.rlwy.net:34911"
 TOKEN_SECRET = "M#3aLz$56m!q#i8*?7S&1x@9Rc!5P^9O#7kL2!9Q8mL2P!4R@7sV6wN0zI#8X?4B!6nA3cJ2fP6aT8xO2uZ6yD2eL9"
+TOKEN_EXPIRES_IN = "1d"
+
+
+TOKEN_NAME='onlinks-sytem-token'
+
+PRIMARY_USER_NAME="augusto"
+PRIMARY_USER_EMAIL="augusto@gmail.com"
+PRIMARY_USER_PASSWORD="13a5u7gwA$"
