--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && set NODE_ENV=production && nodemon dist/server.js",
-    "dev:server": "ts-node-dev --respawn --transpile-only --ignore node_modules src/server.ts"
+    "start": "nodemon dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore node_modules src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@sentry/node": "^7.80.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -23,16 +25,30 @@
     "nodemon": "^3.0.1",
     "pino": "^8.16.1",
     "prisma": "^5.5.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/bcryptjs": "^2.4.5",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.20",
+    "@types/express": "^4.17.21",
+    "@types/hapi__joi": "^17.1.13",
+    "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.9",
-    "@types/pino-pretty": "^5.0.0"
+    "@types/pino-pretty": "^5.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "jest": "^26.6.0",
+    "ts-jest": "^26.4.1",
+    "ts-node-dev": "^1.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.9.5"
   }
 }
