desenvolvimento de diversos endpoits responsaveis por gerenciar usuários, pagina de links e link

--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ TOKEN_EXPIRES_IN = "1d"
 
 TOKEN_NAME='onlinks-sytem-token'
 
-PRIMARY_USER_NAME="augusto"
-PRIMARY_USER_EMAIL="augusto@gmail.com"
-PRIMARY_USER_PASSWORD="13a5u7gwA$"
+PRIMARY_USER_NAME="admin"
+PRIMARY_USER_EMAIL="admin@gmail.com"
+PRIMARY_USER_PASSWORD="admin123@A"
