--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ TOKEN_NAME='onlinks-sytem-token'
 PRIMARY_USER_NAME="admin"
 PRIMARY_USER_EMAIL="admin@gmail.com"
 PRIMARY_USER_PASSWORD="admin123@A"
+PRIMARY_USERNAME='admin'
