alter-controllers-logic

--- a/.env
+++ b/.env
@@ -13,3 +13,9 @@ PRIMARY_USER_NAME="admin"
 PRIMARY_USER_EMAIL="admin@gmail.com"
 PRIMARY_USER_PASSWORD="admin123@A"
 PRIMARY_USERNAME='admin'
+
+BACK_END_URL_SHORTENER_ONLINKS = "https://link-shortener-onlinks-production.up.railway.app"
+ACCESS_KEY_SHORTENER_ONLINKS = "4295fce475476c68492e47e68db4fb41ad100a92"
+
+
+LINK_USERNAME_ONLINKS = "https://localhost:3000/link"
